# AI

./: .replit  README.md  app.py  config.py  database.py  pyproject.toml  replit.md
api/: groups_api.py  logs_api.py  reports_api.py  users_api.py
attached_assets/: OperationLog20251119093612_1763534287446.csv  Pasted-I-want-you-to-build-a-complete-production-ready-web-application-on-Replit-using-Python-Flask-or-Fa-1763530977867_1763530977867.txt
routes/: auth.py  dashboard.py  groups.py  siem.py  users.py
static/css/: style.css
static/js/: main.js
templates/: base.html  dashboard_admin.html  dashboard_analyst.html  dashboard_manager.html  dashboard_user.html  groups.html  log_sources.html  login.html  siem_dashboard.html  upload_logs.html  users.html
